# vans_coding_router

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
.github/workflows/: fly-deploy.yml
config/: chatLanguageModels.vans.json  fly.secrets.env.example  router.example.yaml  router.prod.yaml  router.stg.example.yaml
guide/: DEPLOYMENT.md  FLY_DEPLOYMENT.md  LOCAL_DEV.md  OAUTH.md  OAUTH_AND_RENDER.md  VSCODE_COPILOT_BYOK.md
scripts/: deploy-fly.ps1  fix-vscode-models-config.py  install-vscode-models.cmd  install-vscode-models.ps1  run-local.ps1
src/: bootstrap.py
src/application/dto/: chat_dto.py
src/application/use_cases/: api_use_case.py  auth_use_case.py  lobby_use_case.py  portal_use_case.py
src/domain/: errors.py
src/domain/entities/: auth.py  chat.py
src/domain/ports/: api_key_repository.py  llm_gateway.py  request_log.py  router_repository.py
src/infrastructure/: config.py
src/infrastructure/auth/: client_api_key.py  google_oauth.py
src/infrastructure/gateways/: __init__.py  copilot_compat.py  (+2 more)
tests/: api_test_utils.py  conftest.py  fakes.py
tests/infrastructure/: test_copilot_compat.py  test_file_request_logger.py  test_install_vscode_models_script.py  test_log_archive_job.py  test_merge_chat_language_models.py  test_model_id.py  test_openai_compatible_gateway_compat.py  test_postgres_executemany.py  test_postgres_router_repository.py  test_repository_factory.py  test_response_for_log.py  test_routing_gateway.py  test_sqlite_router_repository.py  test_token_limit.py
(+51 files in other folders)
