[tool.pytest.ini_options]
pythonpath = ["tests", "."]
testpaths = ["tests"]

[project]
name = "vans-coding-router"
version = "0.2.2"
description = "OpenAI-compatible cloud provider router for Vans Coding classes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "uvicorn>=0.41.0",
    "pytz>=2024.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "google-auth>=2.55.0",
    "requests>=2.34.2",
]
